Duplicate objects are created when a library overridden collection has new objects added that are then also overridden. #101679

Closed
opened 2022-10-07 16:26:08 +02:00 by stephen thomas · 15 comments

System Information
Operating system: macOS-12.6-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: (newest version of Blender that worked as expected)

Short description of error
Duplicate objects are being created when new objects that have been added to a collection that is linked to another file are given a library override.

This is a simplified & more refined version of this report: https://developer.blender.org/T101466

Exact steps for others to reproduce the error

duplicate-bug.mp4

  • Default scene - Delete camera and light.
  • Add armature and cube
  • Set armature as parent of cube
  • Save as 'props.blend'
  • Create a new file, delete all objects
  • Link the 'props' collection from 'props.blend'
  • Click on Object > Relations > Make Library Override
  • Save as 'shot.blend'
  • Open 'props.blend'
  • Add Suzanne object to the 'props' collection
  • Add an armature object to the 'props' collection
  • Set armature as parent of Suzanne
  • Save
  • Open 'shot.blend'
  • Select Suzanne armature
  • Click on Object > Relations > Make Library Override
  • Duplicates of the Suzanne mesh object and Suzanne armature have been created.
  • Save 'shot.blend'
  • Reload 'shot.blend'
  • The duplicates are still there. An error message appears saying:
    "//Data corruption: data-block 'OBAarmature.002' is using another local data-block ('OBArmature.001') as library override reference
    Data corruption: data-block 'OBSuzanne.001' is using another local data-block ('OBSuzanne') as library override reference//"

shot-01.blend

props.blend

**System Information** Operating system: macOS-12.6-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: (newest version of Blender that worked as expected) **Short description of error** Duplicate objects are being created when new objects that have been added to a collection that is linked to another file are given a library override. This is a simplified & more refined version of this report: https://developer.blender.org/T101466 **Exact steps for others to reproduce the error** [duplicate-bug.mp4](https://archive.blender.org/developer/F13628112/duplicate-bug.mp4) - Default scene - Delete camera and light. - Add armature and cube - Set armature as parent of cube - Save as 'props.blend' - Create a new file, delete all objects - Link the 'props' collection from 'props.blend' - Click on Object > Relations > Make Library Override - Save as 'shot.blend' - Open 'props.blend' - Add Suzanne object to the 'props' collection - Add an armature object to the 'props' collection - Set armature as parent of Suzanne - Save - Open 'shot.blend' - Select Suzanne armature - Click on Object > Relations > Make Library Override - Duplicates of the Suzanne mesh object and Suzanne armature have been created. - Save 'shot.blend' - Reload 'shot.blend' - The duplicates are still there. An error message appears saying: "//Data corruption: data-block 'OBAarmature.002' is using another local data-block ('OBArmature.001') as library override reference Data corruption: data-block 'OBSuzanne.001' is using another local data-block ('OBSuzanne') as library override reference//" [shot-01.blend](https://archive.blender.org/developer/F13628117/shot-01.blend) [props.blend](https://archive.blender.org/developer/F13628118/props.blend)
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas

Added subscriber: @artutava

Added subscriber: @artutava

It's happening here with some rigs. It simply duplicates objects inside the link to the main collection in the scene.

It's happening here with some rigs. It simply duplicates objects inside the link to the main collection in the scene.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Following steps strictly I think I need to save file after step 4?
Also I have skipped step 4 and deleted scene content after step 5 after I wasn't able to reproduce for the first time.

I was checking with 3.4 and 3.3 and wasn't able to reproduce exact issue.

Only got info message in info editor:

Object Armature.001 lost data
Object Suzanne lost data

And error in conole:
ERROR (wm.files): C:\Users\blender\git\blender-vdev\blender.git\source\blender\windowmanager\intern\wm_files.c:869 file_read_reports_finalize: 2 local ObjectData and 0 local Object proxies are reported to be missing, this should never happen

Following steps strictly I think I need to save file after step 4? Also I have skipped step 4 and deleted scene content after step 5 after I wasn't able to reproduce for the first time. I was checking with 3.4 and 3.3 and wasn't able to reproduce exact issue. Only got info message in info editor: ``` Object Armature.001 lost data Object Suzanne lost data ``` And error in conole: `ERROR (wm.files): C:\Users\blender\git\blender-vdev\blender.git\source\blender\windowmanager\intern\wm_files.c:869 file_read_reports_finalize: 2 local ObjectData and 0 local Object proxies are reported to be missing, this should never happen`
Author

Thanks for your response Richard.

Following steps strictly I think I need to save file after step 4?

The name of the collection doesn’t really matter, it’s not related to the bug but I thought it might help to understand the context of the bug (e.g. it makes sense that a ‘props’ collection is a collection that can be added to during a production and not be static/locked off). When you create a new file in step 5, it’ll ask you to save anyway.

Also I have skipped step 4 and deleted scene content after step 5 after I wasn't able to reproduce for the first time.

Deleting everything in the scene shouldn’t make a difference to the bug, but it’s what I do in the screen recording and it’s good practice to keep things clean & organised.

Can I ask what you mean when you say ‘for the first time’? The error only occurs after a collection has been linked into the shot file, then new objects added to the linked collection and a library override is added to the new armature object in the shot file. The first time you create the collection and link it into another file shouldn’t show an error.

Only got info message in info editor:

Object Armature.001 lost data
Object Suzanne lost data
And error in conole:
ERROR (wm.files): C:\Users\blender\git\blender-vdev\blender.git\source\blender\windowmanager\intern\wm_files.c:869 file_read_reports_finalize: 2 local ObjectData and 0 local Object proxies are reported to be missing, this should never happen

If you open the shot file attached to this report, yes, it’ll show the errors. This is the result of the bug along with two versions of Suzanne and the rig she’s attached to. If you’d like to reproduce the bug, follow the steps above, or if you’d like granular detail, the video reproduces the bug from scratch, maybe you could follow along to reproduce?

Can I point you to my original bug report here: https://developer.blender.org/T101466. Don’t worry about me asking if new objects should automatically be overridden, I agree that’s a feature request and shouldn’t be in a bug report. Please focus on Omar confirming the duplicate issue.

Please also see this bug report: https://developer.blender.org/T100428. My original bug report was erroneously merged with this one. You’ll see near the end that Bastien confirms the bug and asks me to create a new bug report.

Thanks for your response Richard. > Following steps strictly I think I need to save file after step 4? The name of the collection doesn’t really matter, it’s not related to the bug but I thought it might help to understand the context of the bug (e.g. it makes sense that a ‘props’ collection is a collection that can be added to during a production and not be static/locked off). When you create a new file in step 5, it’ll ask you to save anyway. > Also I have skipped step 4 and deleted scene content after step 5 after I wasn't able to reproduce for the first time. Deleting everything in the scene shouldn’t make a difference to the bug, but it’s what I do in the screen recording and it’s good practice to keep things clean & organised. Can I ask what you mean when you say ‘for the first time’? The error only occurs after a collection has been linked into the shot file, then new objects added to the linked collection and a library override is added to the new armature object in the shot file. The first time you create the collection and link it into another file shouldn’t show an error. > Only got info message in info editor: > >Object Armature.001 lost data >Object Suzanne lost data >And error in conole: >ERROR (wm.files): C:\Users\blender\git\blender-vdev\blender.git\source\blender\windowmanager\intern\wm_files.c:869 file_read_reports_finalize: 2 local ObjectData and 0 local Object proxies are reported to be missing, this should never happen If you open the shot file attached to this report, yes, it’ll show the errors. This is the result of the bug along with two versions of Suzanne and the rig she’s attached to. If you’d like to reproduce the bug, follow the steps above, or if you’d like granular detail, the video reproduces the bug from scratch, maybe you could follow along to reproduce? Can I point you to my original bug report here: https://developer.blender.org/T101466. Don’t worry about me asking if new objects should automatically be overridden, I agree that’s a feature request and shouldn’t be in a bug report. Please focus on Omar confirming the duplicate issue. Please also see this bug report: https://developer.blender.org/T100428. My original bug report was erroneously merged with this one. You’ll see near the end that Bastien confirms the bug and asks me to create a new bug report.

I saw errors from your file. I just wanted to clarify after I wasn't able to reproduce, I need to construct written steps anyway. will try following the video instead and see what I missed if I can reproduce.

I saw errors from your file. I just wanted to clarify after I wasn't able to reproduce, I need to construct written steps anyway. will try following the video instead and see what I missed if I can reproduce.
Author

Thanks Richard, let me know if there's anything I can do to help.

Thanks Richard, let me know if there's anything I can do to help.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by bb95609fce

This issue was referenced by bb95609fcee0c6dae2c6a2a79c5a1506d453e106

This issue was referenced by a379fce14b

This issue was referenced by a379fce14bdaa9fd9011d6fd0591b50f94773229

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-10-12 11:49:58 +02:00
Author

Amazing, thanks Bastien and Richard, really appreciate it.

Amazing, thanks Bastien and Richard, really appreciate it.

@stephenthomas You're much welcome, thanks for reporting the issue. :)

@stephenthomas You're much welcome, thanks for reporting the issue. :)
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101679
No description provided.