Fix T101679: Duplicate objects are created when 'Make' override is called on existing override in 3DView

When the active selected object in the 3DView is already a local
liboverride, only perform the 'clear system flag' process on selected
objects, there is no point in trying to create an override out of it.